correct experiences section on mobile

--- a/app/theme.css
+++ b/app/theme.css
@@ -1,10 +1,10 @@
 @theme {
-    --purple: #8A57C9;
-    --medium-purple: #C5ADE3;
-    --very-light-purple: #F5F0FA;
-    --grey: #3C3C3C;
-    --light-purple: #F8F2FF;
-    --dark-grey: #4C4C4C;
-    --light-grey: #929292;
-    --very-light-grey: #EDEDED;
+    --color-purple: #8A57C9;
+    --color-medium-purple: #C5ADE3;
+    --color-very-light-purple: #F5F0FA;
+    --color-grey: #3C3C3C;
+    --color-light-purple: #F8F2FF;
+    --color-dark-grey: #4C4C4C;
+    --color-light-grey: #929292;
+    --color-very-light-grey: #EDEDED;
 }
